Bug #40815 Data/undo files are when initialized written 32k at a time
Submitted: 18 Nov 2008 11:20 Modified: 19 Nov 2008 10:49
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Jonas Oreland Target Version:

[18 Nov 2008 11:20] Jonas Oreland
Description:
When creating a datafile or a undofile
(or soon redo-file), the file is written 32k at a time.

This can give poor io-throughput

How to repeat:
create data/undo file(s)

Suggested fix:
improve write size
[18 Nov 2008 11:21] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/59046

2750 Jonas Oreland	2008-11-18
      ndb - bug#40815 - increase init-write-size to 512k
[18 Nov 2008 11:22] Jonas Oreland
this patch increases to 512k
[18 Nov 2008 11:31] Bugs System
Pushed into 5.1.29-ndb-6.4.0  (revid:jonas@mysql.com-20081118102128-d2pqz3oz0b9rad96)
(version source revid:jonas@mysql.com-20081118102803-7wuzv99dlrvsbv46) (pib:5)
[18 Nov 2008 11:33] Bugs System
Pushed into 5.1.29-ndb-6.3.19  (revid:jonas@mysql.com-20081118102128-d2pqz3oz0b9rad96)
(version source revid:jonas@mysql.com-20081118102128-d2pqz3oz0b9rad96) (pib:5)
[18 Nov 2008 18:17] Jon Stephens
Documented bugfix in the NDB-6.3.19 changelog as follows:

        Redo logs, undo logs, and data files were created in 32K increments. 
        Now these files are created in 512K increments, resulting in shorter
        creation times.
[18 Nov 2008 20:55] Jonas Oreland
redo are not affected
(yet... but might be if I push the SparseInitFragmentLogfiles)
[19 Nov 2008 10:49] Jon Stephens
Amended changelog entry per comment from Jonas. Closed.