ndb - bug#40815 - increase init-write-size to 512k